--- a/Ders5/app/src/main/AndroidManifest.xml
+++ b/Ders5/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         </activity>
 
         <activity android:name=".FotografVideoEkleActivity" />
+        <activity android:name=".HaritaActivity" />
     </application>
 
 </manifest>
