--- a/Ders5/app/src/main/AndroidManifest.xml
+++ b/Ders5/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
 
         <activity android:name=".FotografVideoEkleActivity" />
         <activity android:name=".HaritaActivity" />
+        <activity android:name=".SmsGonderActivity" />
     </application>
 
 </manifest>
